concepts/networkpolicy/DB.yml
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    project: roboshop
    environment: dev
    tier: database
  namespace: roboshop
spec:
  containers:
  - name: database
    image: nginx
