concepts/networkpolicy/backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    project: roboshop
    environment: dev
  namespace: roboshop
spec:
  containers:
  - name: backend
    image: nginx
