concepts/networkpolicy/frontend.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: roboshop
  labels:
    purpose: debugging
spec:
  containers:
    - name: debug
      image: dd070/debug:v1
