concepts/networkpolicy/network-policy-back.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
  namespace: roboshop
spec:
  podSelector:
    matchLabels:
      project: roboshop
      environment: dev
      tier: database
  policyTypes:
  - Ingress
  ingress: []
  # - from:
  #   - podSelector:
  #       matchLabels:
  #         project: roboshop
  #         environment: dev
